# Computational-mathematics

./: Readme.md
Bonus/Dual Numbers/: CMakeLists.txt  Readme.md
Bonus/Dual Numbers/src/: DualNumbers.cpp  DualNumbers.h  DualNumbersMath.h
Bonus/Dual Numbers/tests/: CTest  DualNumbersTests.cpp
Bonus/LinearRegressionCircle/: LinearRegressionCircle.py  Readme.md
Bonus/MatrixGuilbert/: MatrixGuilbert.py
HW1/Task1/: Task1.md  Task1.nb
HW1/Task2/: Task2.ipynb  Task2.md  Task2.nb
HW1/Task3/: Task3.md  Task3.nb
HW2/Task4/: Task4.ipynb  Task4.md
HW3/Task1/: Task1.ipynb  Task1.md
HW3/Task2/: Task2.ipynb  Task2.md
HW4/Task1/: Task1.ipynb
HW4/Task2/: Task2.ipynb
HW4/Task3/: Task3.ipynb
HW5/Task1/: Task1.md
HW5/Task2/: Task2.ipynb  Task2.md
HW5/Task3/: Task3.ipynb  Task3.md
HW5/Task4/: Task4.ipynb  Task4.md
HW6/Task1/: Task1.ipynb  Task1.md
